Added image upscaling (will probably change in the future), added settings form, etc.

--- a/MCScreenshot/App.config
+++ b/MCScreenshot/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MCScreenshot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <MCScreenshot.Properties.Settings>
+            <setting name="ScreenshotSavePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="WatermarkImagePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DefaultScreenshotKey" serializeAs="String">
+                <value />
+            </setting>
+        </MCScreenshot.Properties.Settings>
+    </userSettings>
 </configuration>
